binread/tests/errors/invalid_map_fn.stderr
error[E0425]: cannot find value `does_not_exist` in this scope
 --> $DIR/invalid_map_fn.rs:5:16
  |
5 |     #[br(map = does_not_exist)]
  |                ^^^^^^^^^^^^^^ not found in this scope
